Revert "Set a random placeholder"
This reverts commit 01c7b2491da3e1abab6eb4fae58f892c10f11a6a.

--- a/.env.dist
+++ b/.env.dist
@@ -41,13 +41,13 @@ SMTP_ENABLE_START_TLS=false
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=root
-POSTGRES_PASSWORD=<random-password>
+POSTGRES_PASSWORD=libriciel2k18
 
 CORE_DB_USER=ipcore
-CORE_DB_PASSWORD=<random-password>
+CORE_DB_PASSWORD=ipcore
 
 QUARTZ_DB_USER=quartz
-QUARTZ_DB_PASSWORD=<random-password>
+QUARTZ_DB_PASSWORD=quartz
 
 KEYCLOAK_AUTH_PROTOCOL=https
 KEYCLOAK_HOST=keycloak
@@ -57,29 +57,29 @@ KEYCLOAK_CLIENT_ID=ipcore-api
 KEYCLOAK_CLIENT_SECRET=<random-uuid>
 KEYCLOAK_WEB_CLIENT_ID=ipcore-web
 INITIAL_KEYCLOAK_ADMIN_USER=admin
-INITIAL_KEYCLOAK_ADMIN_PASSWORD=<random-password>
+INITIAL_KEYCLOAK_ADMIN_PASSWORD=<random-12-chars-at-least>
 
 KEYCLOAK_DB_DATABASE=keycloak
 KEYCLOAK_DB_USER=keycloak
-KEYCLOAK_DB_PASSWORD=<random-password>
-KEYCLOAK_RESTADMIN_PASSWORD=<random-password>
-KEYCLOAK_SOAPUI_PASSWORD=<random-password>
+KEYCLOAK_DB_PASSWORD=keycloak
+KEYCLOAK_RESTADMIN_PASSWORD=<random-12-chars-at-least>
+KEYCLOAK_SOAPUI_PASSWORD=<random-12-chars-at-least>
 
 INITIAL_IPARAPHEUR_ADMIN_USER=user
-INITIAL_IPARAPHEUR_ADMIN_PASSWORD=<random-password>
+INITIAL_IPARAPHEUR_ADMIN_PASSWORD=<random-12-chars-at-least>
 
 CONTENT_HOST=alfresco
 CONTENT_PORT=8080
 CONTENT_DB_USER=alfresco
 CONTENT_DB_PASSWORD=alfresco
 CONTENT_USER=admin
-CONTENT_PASSWORD=<random-password>
+CONTENT_PASSWORD=admin
 
 WORKFLOW_DB_USER=flowable
-WORKFLOW_DB_PASSWORD=<random-password>
+WORKFLOW_DB_PASSWORD=flowable
 
 SECUREMAIL_DB_USER=pastellconnector
-SECUREMAIL_DB_PASSWORD=<random-password>
+SECUREMAIL_DB_PASSWORD=pastellconnector
 
 SECRET_PROTOCOL=http
 SECRET_HOST=vault
