Use the invalid suffix

--- a/.env.dist
+++ b/.env.dist
@@ -34,7 +34,7 @@ SMTP_PORT=25
 SMTP_USER=
 SMTP_PASSWORD=
 SMTP_ENABLE_AUTH=false
-SMTP_MAIL_FROM=ne-pas-repondre@domaine.local
+SMTP_MAIL_FROM=ne-pas-repondre@domaine.invalid
 SMTP_ENABLE_SSL=false
 SMTP_ENABLE_START_TLS=false
 
