Trigger some crash if a value is not set

--- a/.env.dist
+++ b/.env.dist
@@ -23,8 +23,8 @@ BACKUPS_ROOT_DIR=/data/iparapheur_backups
 
 APPLICATION_PROTOCOL=https
 APPLICATION_HOST=iparapheur.domaine.local
-CERTIFICATE_FULLCHAIN_PATH=/data/iparapheur/certificate/ssl/fullchain.pem
-CERTIFICATE_PRIVKEY_PATH=/data/iparapheur/certificate/ssl/privkey.pem
+CERTIFICATE_FULLCHAIN_PATH=${DATA_ROOT_DIR}/certificate/ssl/fullchain.pem
+CERTIFICATE_PRIVKEY_PATH=${DATA_ROOT_DIR}/certificate/ssl/privkey.pem
 
 SMTP_HOST=10.123.0.1
 SMTP_PORT=25
