--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,9 @@ services:
   ca-certs:
     image: registry.libriciel.fr:443/public/libriciel:0.1.0
     volumes:
-      - ${DATA_ROOT_DIR}/certificates/cacerts:/etc/ssl/certs/
-      - ${DATA_ROOT_DIR}/certificates/local:/usr/local/share/ca-certificates
+      - ${DATA_ROOT_DIR:?}/certificate/cacerts:/etc/ssl/certs/
+      - ${DATA_ROOT_DIR:?}/certificate/local-cacerts:/usr/local/share/ca-certificates
+      - ${CERTIFICATE_FULLCHAIN_PATH}:/usr/local/share/ca-certificates/local-iparapheur-certificate.pem
 
 
   nginx:
@@ -135,9 +136,9 @@ services:
       keycloak:
         condition: service_started
     external_links:
-      - nginx:${APPLICATION_HOST}
+      - nginx:${APPLICATION_HOST:?}
     volumes:
-      - ${DATA_ROOT_DIR}/certificates/cacerts/java/cacerts:/truststore.jks
+      - ${DATA_ROOT_DIR:?}/certificate/cacerts/java/cacerts:/truststore.jks
 
 
   web:
@@ -149,11 +150,11 @@ services:
         limits:
           memory: 64M
     environment:
-      - APPLICATION_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}
+      - APPLICATION_URL=${APPLICATION_PROTOCOL:?}://${APPLICATION_HOST:?}
       - VERSION=%CI_COMMIT_REF_NAME%
-      - KEYCLOAK_URL=${KEYCLOAK_AUTH_PROTOCOL}://${APPLICATION_HOST}/auth
+      - KEYCLOAK_URL=${KEYCLOAK_AUTH_PROTOCOL:?}://${APPLICATION_HOST:?}/auth
       - KEYCLOAK_REALM
-      - KEYCLOAK_CLIENT_ID=${KEYCLOAK_WEB_CLIENT_ID}
+      - KEYCLOAK_CLIENT_ID=${KEYCLOAK_WEB_CLIENT_ID:?}
 
 
   workflow:
@@ -183,7 +184,7 @@ services:
         limits:
           memory: 1536M
     volumes:
-      - ${DATA_ROOT_DIR}/pes-viewer/pesPJ:/pesPJ/
+      - ${DATA_ROOT_DIR:?}/pes-viewer/pesPJ:/pesPJ/
 
 
   libersign:
@@ -233,7 +234,7 @@ services:
       # TODO: Integrate it into the root Dockerfile, somehow
       - JAVA_OPTS=-Djavax.net.ssl.trustStore=/truststore.jks -Djavax.net.ssl.trustStoreType=jks -Djavax.net.ssl.trustStorePassword=''
     volumes:
-      - ${DATA_ROOT_DIR}/certificates/cacerts/java/cacerts:/truststore.jks
+      - ${DATA_ROOT_DIR}/certificate/cacerts/java/cacerts:/truststore.jks
     depends_on:
       ca-certs:
         condition: service_completed_successfully
@@ -263,7 +264,7 @@ services:
       ca-certs:
         condition: service_completed_successfully
     external_links:
-      - nginx:${APPLICATION_HOST}
+      - nginx:${APPLICATION_HOST:?}
     environment:
       - KEYCLOAK_HOST
       - KEYCLOAK_PORT
@@ -278,7 +279,7 @@ services:
       # TODO: Integrate it into the root Dockerfile, somehow
       - JAVA_OPTS=-Djavax.net.ssl.trustStore=/truststore.jks -Djavax.net.ssl.trustStoreType=jks -Djavax.net.ssl.trustStorePassword=''
     volumes:
-      - ${DATA_ROOT_DIR}/certificates/cacerts/java/cacerts:/truststore.jks
+      - ${DATA_ROOT_DIR:?}/certificate/cacerts/java/cacerts:/truststore.jks
 
 
   alfresco:
@@ -308,7 +309,7 @@ services:
       libriciel-engine-extractors:
         condition: service_healthy
     volumes:
-      - ${DATA_ROOT_DIR}/alfresco:/usr/local/tomcat/alf_data
+      - ${DATA_ROOT_DIR:?}/alfresco:/usr/local/tomcat/alf_data
 
 
   transform-core-aio:
@@ -372,7 +373,7 @@ services:
       - SECUREMAIL_DB_USER
       - SECUREMAIL_DB_PASSWORD
     volumes:
-      - ${DATA_ROOT_DIR}/postgres:/var/lib/postgresql/data
+      - ${DATA_ROOT_DIR:?}/postgres:/var/lib/postgresql/data
 
 
   redis:
@@ -384,7 +385,7 @@ services:
         limits:
           memory: 128M
     volumes:
-      - ${DATA_ROOT_DIR}/redis:/data
+      - ${DATA_ROOT_DIR:?}/redis:/data
 
 
   keycloak:
@@ -415,19 +416,21 @@ services:
       - SMTP_MAIL_FROM
       - SMTP_ENABLE_SSL
       - SMTP_ENABLE_START_TLS
-      - KC_DB_USERNAME=${KEYCLOAK_DB_USER}
-      - KC_DB_PASSWORD=${KEYCLOAK_DB_PASSWORD}
-      - KC_HOSTNAME=${APPLICATION_HOST}
-      - KC_HOSTNAME_ADMIN=${APPLICATION_HOST}
+      - KC_DB_USERNAME=${KEYCLOAK_DB_USER:?}
+      - KC_DB_PASSWORD=${KEYCLOAK_DB_PASSWORD:?}
+      - KC_HOSTNAME=${APPLICATION_HOST:?}
+      - KC_HOSTNAME_ADMIN=${APPLICATION_HOST:?}
+      - KC_SPI_TRUSTSTORE_FILE_FILE=/truststore.jks
+      - KC_SPI_TRUSTSTORE_FILE_PASSWORD=
       # TODO: Integrate default values into the root Dockerfile, somehow
-      - JAVA_OPTS=-Xmx1G -Djava.net.preferIPv4Stack=true -Dfile.encoding=UTF-8 -Djavax.net.ssl.trustStore=/truststore.jks -Djavax.net.ssl.trustStoreType=jks -Djavax.net.ssl.trustStorePassword=''
+      - JAVA_OPTS=-Xmx1G -Djava.net.preferIPv4Stack=true -Dfile.encoding=UTF-8
     depends_on:
       postgres:
         condition: service_healthy
       ca-certs:
         condition: service_completed_successfully
     volumes:
-      - ${DATA_ROOT_DIR}/certificates/cacerts/java/cacerts:/truststore.jks
+      - ${DATA_ROOT_DIR:?}/certificate/cacerts/java/cacerts:/truststore.jks
 
 
   vault:
@@ -439,12 +442,12 @@ services:
         limits:
           memory: 512M
     environment:
-      - VAULT_ADDR=${SECRET_PROTOCOL}://${SECRET_HOST}:${SECRET_PORT}
-      - VAULT_API_ADDR=${SECRET_PROTOCOL}://${SECRET_HOST}:${SECRET_PORT}
+      - VAULT_ADDR=${SECRET_PROTOCOL:?}://${SECRET_HOST:?}:${SECRET_PORT:?}
+      - VAULT_API_ADDR=${SECRET_PROTOCOL:?}://${SECRET_HOST:?}:${SECRET_PORT:?}
     cap_add:
       - IPC_LOCK
     volumes:
-      - ${DATA_ROOT_DIR}/vault/data:/vault/data
+      - ${DATA_ROOT_DIR:?}/vault/data:/vault/data
 
 
   prometheus:
