Link the truststore on the appropriate images

--- a/.env.dist
+++ b/.env.dist
@@ -35,6 +35,8 @@ SMTP_MAIL_FROM=ne-pas-repondre@domaine.invalid
 SMTP_ENABLE_SSL=false
 SMTP_ENABLE_START_TLS=false
 
+TRUSTSTORE_PASSWORD=<random-password>
+
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=root
