--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,13 +32,13 @@ services:
 
 
   ca-certs:
-    image: registry.libriciel.fr:443/public/libriciel/ls-docker-cacerts:0.2.0
+    image: registry.libriciel.fr:443/public/libriciel/ls-docker-cacerts:0.3.0
     environment:
       - TRUSTSTORE_PASSWORD
     volumes:
-      - ${DATA_ROOT_DIR:?}/certificate/cacerts:/etc/ssl/certs/
-      - ${DATA_ROOT_DIR:?}/certificate/local-cacerts:/usr/local/share/ca-certificates
-      - ${CERTIFICATE_FULLCHAIN_PATH}:/usr/local/share/ca-certificates/local-iparapheur-certificate.crt
+      - ${DATA_ROOT_DIR:?}/certificate/cacerts/:/etc/ssl/certs/
+      - ${DATA_ROOT_DIR:?}/certificate/local-cacerts/:/usr/local/share/ca-certificates/
+      - ${CERTIFICATE_FULLCHAIN_PATH:?}:/tmp/local-application-certificate.crt
 
 
   nginx:
@@ -53,15 +53,15 @@ services:
       - APPLICATION_HOST
       - KEYCLOAK_HOST
     volumes:
-      - ${CERTIFICATE_FULLCHAIN_PATH}:/etc/nginx/ssl/fullchain.pem
-      - ${CERTIFICATE_PRIVKEY_PATH}:/etc/nginx/ssl/privkey.pem
+      - ${CERTIFICATE_FULLCHAIN_PATH:?}:/etc/nginx/ssl/fullchain.pem
+      - ${CERTIFICATE_PRIVKEY_PATH?:}:/etc/nginx/ssl/privkey.pem
     ports:
       - "80:80"
       - "443:443"
 
 
   core:
-    image: registry.libriciel.fr:443/public/signature/ip-core:1.12.4
+    image: registry.libriciel.fr:443/public/signature/ip-core:1.13.0
     restart: unless-stopped
     tty: true
     deploy:
@@ -145,7 +145,7 @@ services:
 
 
   web:
-    image: registry.libriciel.fr:443/public/signature/ip-web:1.11.0
+    image: registry.libriciel.fr:443/public/signature/ip-web:1.11.1
     restart: unless-stopped
     tty: true
     deploy:
@@ -161,7 +161,7 @@ services:
 
 
   workflow:
-    image: registry.libriciel.fr/public/signature/workflow:1.11.12
+    image: registry.libriciel.fr/public/signature/workflow:1.11.13
     restart: unless-stopped
     tty: true
     deploy:
@@ -179,7 +179,7 @@ services:
 
 
   pes-viewer:
-    image: registry.libriciel.fr:443/public/signature/pes-viewer:2.0.12
+    image: registry.libriciel.fr:443/public/signature/pes-viewer:2.0.13
     restart: unless-stopped
     tty: true
     deploy:
@@ -201,7 +201,7 @@ services:
 
 
   crypto:
-    image: registry.libriciel.fr/public/signature/crypto:3.1.6
+    image: registry.libriciel.fr/public/signature/crypto:3.1.7
     restart: unless-stopped
     tty: true
     deploy:
@@ -211,7 +211,7 @@ services:
 
 
   pdf-stamp:
-    image: registry.libriciel.fr/public/signature/pdf-stamp:2.7.0
+    image: registry.libriciel.fr/public/signature/pdf-stamp:2.7.2
     restart: unless-stopped
     tty: true
     deploy:
@@ -221,7 +221,7 @@ services:
 
 
   pastell-connector:
-    image: registry.libriciel.fr/public/signature/pastell-connector:2.0.7
+    image: registry.libriciel.fr/public/signature/pastell-connector:2.0.8
     restart: unless-stopped
     tty: true
     deploy:
@@ -245,7 +245,7 @@ services:
 
 
   external-signature-connector:
-    image: registry.libriciel.fr/public/signature/external-signature-connector:1.7.7
+    image: registry.libriciel.fr/public/signature/external-signature-connector:1.7.9
     restart: unless-stopped
     tty: true
     deploy:
@@ -255,7 +255,7 @@ services:
 
 
   legacy-bridge:
-    image: registry.libriciel.fr/public/signature/legacy-bridge:1.6.2
+    image: registry.libriciel.fr/public/signature/legacy-bridge:1.6.3
     restart: unless-stopped
     tty: true
     deploy:
@@ -394,7 +394,7 @@ services:
 
 
   keycloak:
-    image: registry.libriciel.fr:443/public/signature/ip-keycloak:23.0.7.1
+    image: registry.libriciel.fr:443/public/signature/ip-keycloak:23.0.7.2
     command: start --optimized --import-realm
     restart: unless-stopped
     tty: true
