Ajout du service postgres-periodic-task

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -453,3 +453,21 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
+
+
+  postgres-periodic-tasks:
+    image: 	registry.libriciel.fr/public/signature/postgres-periodic-tasks:0.0.1
+    environment:
+      - CORE_DB_USER
+      - CORE_DB_PASSWORD
+      - WORKFLOW_DB_USER
+      - WORKFLOW_DB_PASSWORD
+      - KEYCLOAK_DB_USER
+      - KEYCLOAK_DB_PASSWORD
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_HOST
+      - POSTGRES_PORT
+    depends_on:
+      postgres:
+        condition: service_healthy
