--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -126,6 +126,10 @@ services:
       - "5432:5432"
 
 
+  postgres-periodic-tasks:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/postgres-periodic-tasks/develop:latest
+
+
   keycloak:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/keycloak/develop:latest
     ports:
