Add a early crash on missing password values

--- a/.env.dist
+++ b/.env.dist
@@ -35,18 +35,18 @@ SMTP_MAIL_FROM=ne-pas-repondre@domaine.invalid
 SMTP_ENABLE_SSL=false
 SMTP_ENABLE_START_TLS=false
 
-TRUSTSTORE_PASSWORD=<random-password>
+TRUSTSTORE_PASSWORD=
 
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=root
-POSTGRES_PASSWORD=<random-password>
+POSTGRES_PASSWORD=
 
 CORE_DB_USER=ipcore
-CORE_DB_PASSWORD=<random-password>
+CORE_DB_PASSWORD=
 
 QUARTZ_DB_USER=quartz
-QUARTZ_DB_PASSWORD=<random-password>
+QUARTZ_DB_PASSWORD=
 
 KEYCLOAK_AUTH_PROTOCOL=https
 KEYCLOAK_HOST=keycloak
@@ -60,7 +60,7 @@ INITIAL_KEYCLOAK_ADMIN_PASSWORD=<random-80-entropy-password>
 
 KEYCLOAK_DB_DATABASE=keycloak
 KEYCLOAK_DB_USER=keycloak
-KEYCLOAK_DB_PASSWORD=<random-password>
+KEYCLOAK_DB_PASSWORD=
 KEYCLOAK_RESTADMIN_PASSWORD=<random-80-entropy-password>
 KEYCLOAK_SOAPUI_PASSWORD=<random-80-entropy-password>
 
@@ -70,21 +70,21 @@ INITIAL_IPARAPHEUR_ADMIN_PASSWORD=<random-80-entropy-password>
 CONTENT_HOST=alfresco
 CONTENT_PORT=8080
 CONTENT_DB_USER=alfresco
-CONTENT_DB_PASSWORD=<random-password>
+CONTENT_DB_PASSWORD=
 CONTENT_USER=admin
 CONTENT_PASSWORD=<random-password>
 
 WORKFLOW_DB_USER=flowable
-WORKFLOW_DB_PASSWORD=<random-password>
+WORKFLOW_DB_PASSWORD=
 
 SECUREMAIL_DB_USER=pastellconnector
-SECUREMAIL_DB_PASSWORD=<random-password>
+SECUREMAIL_DB_PASSWORD=
 
 SECRET_PROTOCOL=http
 SECRET_HOST=vault
 SECRET_PORT=8200
-VAULT_UNSEAL_KEY=<key>
-VAULT_TOKEN=<token>
+VAULT_UNSEAL_KEY=
+VAULT_TOKEN=
 
 GDPR_DECLARING_ENTITY_NAME=
 GDPR_DECLARING_ENTITY_ADDRESS=
