--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,14 +132,16 @@ services:
     depends_on:
       ca-certs:
         condition: service_completed_successfully
-      postgres:
-        condition: service_healthy
       alfresco:
-        condition: service_healthy
-      workflow:
         condition: service_healthy
       keycloak:
         condition: service_started
+      postgres:
+        condition: service_healthy
+      vault:
+        condition: service_healthy
+      workflow:
+        condition: service_healthy
     external_links:
       - nginx:${APPLICATION_HOST:?}
     volumes:
@@ -163,7 +165,7 @@ services:
 
 
   workflow:
-    image: registry.libriciel.fr/public/signature/workflow:1.12.2
+    image: registry.libriciel.fr/public/signature/workflow:1.12.4
     restart: unless-stopped
     tty: true
     deploy:
@@ -181,7 +183,7 @@ services:
 
 
   pes-viewer:
-    image: registry.libriciel.fr:443/public/signature/pes-viewer:2.0.18
+    image: registry.libriciel.fr:443/public/signature/pes-viewer:2.1.0
     restart: unless-stopped
     tty: true
     deploy:
@@ -203,7 +205,7 @@ services:
 
 
   crypto:
-    image: registry.libriciel.fr/public/signature/crypto:3.1.11
+    image: registry.libriciel.fr/public/signature/crypto:3.1.12
     restart: unless-stopped
     tty: true
     deploy:
@@ -213,7 +215,7 @@ services:
 
 
   pdf-stamp:
-    image: registry.libriciel.fr/public/signature/pdf-stamp:2.7.7
+    image: registry.libriciel.fr/public/signature/pdf-stamp:2.7.8
     restart: unless-stopped
     tty: true
     deploy:
@@ -223,7 +225,7 @@ services:
 
 
   pastell-connector:
-    image: registry.libriciel.fr/public/signature/pastell-connector:2.0.13
+    image: registry.libriciel.fr/public/signature/pastell-connector:2.0.14
     restart: unless-stopped
     tty: true
     deploy:
@@ -245,7 +247,7 @@ services:
 
 
   external-signature-connector:
-    image: registry.libriciel.fr/public/signature/external-signature-connector:1.8.1
+    image: registry.libriciel.fr/public/signature/external-signature-connector:1.8.2
     restart: unless-stopped
     tty: true
     deploy:
@@ -327,7 +329,7 @@ services:
 
 
   libriciel-engine-extractors:
-    image: registry.libriciel.fr:443/public/signature/ip-alfresco-transform-extractors:2.1.5
+    image: registry.libriciel.fr:443/public/signature/ip-alfresco-transform-extractors:2.1.6
     environment:
       #FIXME !ISSUE_1037
       ACTIVEMQ_URL: "nio://activemq:61616"
@@ -428,7 +430,7 @@ services:
 
 
   vault:
-    image: registry.libriciel.fr/public/signature/ip-vault:1.15.6.2
+    image: registry.libriciel.fr/public/signature/ip-vault:1.15.6.3
     restart: unless-stopped
     tty: true
     deploy:
@@ -445,7 +447,7 @@ services:
 
 
   prometheus:
-    image: registry.libriciel.fr/public/signature/ip-prometheus:2.47.1.3
+    image: registry.libriciel.fr/public/signature/ip-prometheus:2.53.3.0
     deploy:
       resources:
         limits:
